--- a/styles/style.css
+++ b/styles/style.css
@@ -11,17 +11,29 @@
   width: 600px;
   border-radius: 5px;
   background-color: #fff;
-  height: 200px;
 }
 
 .modal-header {
-  padding: 1px 10px;
+  padding: 1rem 1rem;
   display: flex;
   justify-content: space-between;
+  border-bottom: 1px solid #eee;
 }
 
 .modal-close {
   cursor: pointer;
+}
+
+.modal-body {
+  padding: 1rem;
+}
+.modal-body p {
+  margin: 0 0 0.5rem;
+}
+
+.modal-footer {
+  padding: 0.5rem 1rem;
+  border-bottom: 1px solid #eee;
 }
 
 html {
