--- a/styles/style.css
+++ b/styles/style.css
@@ -4,9 +4,23 @@
   z-index: 200;
 }
 
+.bmodal.hide .modal-overlay,
+.bmodal.hide .modal-window {
+  opacity: 1;
+  z-index: 200;
+}
+
 .modal-window, .modal-overlay {
   opacity: 0;
   z-index: -1;
+}
+
+.bmodal.open .modal-window {
+  transform: translateY(200px);
+}
+
+.bmodal.hide .modal-window {
+  transform: translateY(-200px);
 }
 
 .modal-overlay {
@@ -16,12 +30,16 @@
   right: 0;
   bottom: 0;
   background: rgba(0, 0, 0, 0.5);
+  transition: all 0.2s ease-in;
 }
 
 .modal-window {
   width: 600px;
   border-radius: 5px;
   background-color: #fff;
+  margin: 0 auto;
+  transform: translateY(-200px);
+  transition: transform 0.2s ease-in;
 }
 
 .modal-header {
@@ -43,7 +61,6 @@
 }
 
 .modal-footer {
-  padding: 0.5rem 1rem;
   border-bottom: 1px solid #eee;
 }
 
